overflow fix

--- a/pages/wishlist/wishlist.css
+++ b/pages/wishlist/wishlist.css
@@ -3,6 +3,10 @@
     position: absolute;
 }
 
+body {
+    overflow: hidden;
+}
+
 .wishlist-badge {
     position: relative;
     left: 7rem;
